--- a/random/src/index.css
+++ b/random/src/index.css
@@ -1,6 +1,9 @@
 body {
   margin-left: 200px;
   margin-right: 200px;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -66,4 +69,8 @@ ul li {
   text-align: center;
   font-size: 30px;
   background-color: lightgray;
+}
+
+footer {
+  margin-top: auto;
 }
